leave history and profile page updated

--- a/src/main/resources/templates/admin/leavehistory.html
+++ b/src/main/resources/templates/admin/leavehistory.html
@@ -21,25 +21,25 @@
         <div class="form-group row">
           <label for="userid" class="col-sm-2 col-form-label">User ID:</label>
           <div class="col-sm-10">
-            <input type="text" readonly class="form-control-plaintext" id="userid" value="12345">
+          		<label id="userid"  class="col-sm-2 col-form-label">1234</label>
           </div>
         </div>
         <div class="form-group row">
             <label for="Name" class="col-sm-2 col-form-label">Name:</label>
             <div class="col-sm-10">
-              <input type="text" readonly class="form-control-plaintext" id="Name" value="FirstName LastName">
+              <label id="Name"  class="col-sm-2 col-form-label">Full Name</label>
             </div>
           </div>
           <div class="form-group row">
             <label for="Designation" class="col-sm-2 col-form-label">Designation:</label>
             <div class="col-sm-10">
-              <input type="text" readonly class="form-control-plaintext" id="Designation" value="Faculty">
+              <label id="Designation"  class="col-sm-2 col-form-label">Faculty</label>
             </div>
           </div>
           <div class="form-group row">
             <label for="Department" class="col-sm-2 col-form-label">Department:</label>
             <div class="col-sm-10">
-              <input type="text" readonly class="form-control-plaintext" id="Department" value="Computer">
+              <label id="Department"  class="col-sm-2 col-form-label">Computer</label>
             </div>
           </div>
       </form><br>
@@ -66,7 +66,7 @@
                 <tr>
                     <td>4 Nov</td>
                     <td>10 Nov</td>
-                    <td>CASUAL LEAVE</td>
+                    <td>Casual Leave</td>
                     <td>Going Home.</td>
                     <td>xxx</td>
                     <td>5</td>
@@ -78,7 +78,7 @@
                     <tr>
                         <td>4 Nov</td>
                         <td>20 November</td>
-                        <td>CASUAL LEAVE</td>
+                        <td>Casual Leave</td>
                         <td>sick..</td>
                         <td>xxx</td>
                         <td>5</td>
@@ -90,7 +90,7 @@
                     <tr>
                         <td>4 Nov</td>
                         <td>18 March 2021</td>
-                        <td>CASUAL LEAVE</td>
+                        <td>Casual Leave</td>
                         <td>bdshbj.</td>
                         <td>xxx</td>
                         <td>5</td>
