leavehistory button better now

--- a/src/main/resources/templates/admin/leavehistory.html
+++ b/src/main/resources/templates/admin/leavehistory.html
@@ -71,7 +71,7 @@
                     <td>xxx</td>
                     <td>5</td>
                     <td><button type="button" class="btn status-btn btn-sm btn-warning">Pending</button></td>
-                    <td><button type="button" class="btn status-btn btn-sm btn-danger">Cancel</button></td>
+                    <td><button type="button" class="btn status-btn btn-sm btn-outline-danger">Cancel</button></td>
                 </tr>
             
                     
@@ -83,7 +83,7 @@
                         <td>xxx</td>
                         <td>5</td>
                         <td><button type="button" class="btn status-btn btn-sm btn-success">Accepted</button></td>
-                        <td><button type="button" class="btn status-btn btn-sm btn-danger">Cancel</button></td>
+                        <td><button type="button" class="btn status-btn btn-sm btn-outline-danger">Cancel</button></td>
                     	
                     </tr>
 
@@ -94,8 +94,8 @@
                         <td>bdshbj.</td>
                         <td>xxx</td>
                         <td>5</td>
-                        <td><button type="button" class="btn status-btn btn-sm btn-danger">Reject</button></td>
-                        <td><button type="button" class="btn status-btn btn-sm btn-danger">Cancel</button></td>
+                        <td><button type="button" class="btn status-btn btn-sm btn-danger">Rejected</button></td>
+                        <td><button type="button" class="btn status-btn btn-sm btn-outline-danger">Cancel</button></td>
                     </tr>
                     
                     </tbody>
