--- a/src/main/resources/templates/admin/addleavebalance.html
+++ b/src/main/resources/templates/admin/addleavebalance.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BITMIS</title>
-    <link rel="stylesheet" th:href="@{/css/table.css}">
+ 
 	<link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/index.css}">
 	<link rel="stylesheet" th:href="@{/css/style.css}">
@@ -96,7 +96,7 @@
               </div>
           </form>
 
-          <div class="container mt-5 font">
+          <div class="container mt-5   ">
               <div class="row">
                   <div class="userDetails"><strong>Results: User Details</strong></div>
               </div><br>
