--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -805,3 +805,6 @@ background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, F
 }
 
 .dropdown-toggle:after { content: none !important }
+
+
+/* Home page cards  */
