--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -153,7 +153,7 @@
               <option value="select">Select</option>
               <option value="ADMIN">Admin</option>
               <option value="STAFF">Staff</option>
-              
+              <option value="HOD">HOD</option>
             </select>
           </div>
   
